# BugList

./: BugList2.md  README.md  实验室电脑配置openpose的坑.md  配置VPN.md
build_flownet_2.0/: Makefile
build_icp_op.so/bazel/: README.md  WORKSPACE
build_icp_op.so/bazel/ops/: icp_op.py  icp_op_kernel.cc
build_icp_op.so/secondMethod/: CMakeLists.txt  README.md  icp_normal_op_kernel.cc  icp_op.py
read_openni/: CMakeLists.txt  README.md
read_openni/src/: depth.cpp  main.cpp
